doc: adding the man page bindle_basename_r.3

--- a/Makefile.am
+++ b/Makefile.am
@@ -78,6 +78,7 @@ lib_LIBRARIES				=
 man_MANS				= doc/mans/bindletools.1 \
 					  doc/mans/bindletools.3 \
 					  doc/mans/bindle_array.3 \
+					  doc/mans/bindle_basename_r.3 \
 					  doc/mans/bindle_bindex.3 \
 					  doc/mans/bindle_decode.3 \
 					  doc/mans/bindle_dirname_r.3 \
@@ -120,6 +121,7 @@ EXTRA_DIST				= $(doc_DATA) \
 					  doc/mans/bindletools.1.in \
 					  doc/mans/bindletools.3.in \
 					  doc/mans/bindle_array.3.in \
+					  doc/mans/bindle_basename_r.3.in \
 					  doc/mans/bindle_bindex.3.in \
 					  doc/mans/bindle_decode.3.in \
 					  doc/mans/bindle_dirname_r.3.in \
@@ -254,6 +256,9 @@ doc/mans/bindletools.3: Makefile $(srcdir)/doc/mans/bindletools.3.in
 doc/mans/bindle_array.3: Makefile $(srcdir)/doc/mans/bindle_array.3.in
 	@$(do_subst_dt)
 
+doc/mans/bindle_basename_r.3: Makefile $(srcdir)/doc/mans/bindle_basename_r.3.in
+	@$(do_subst_dt)
+
 doc/mans/bindle_bindex.3: Makefile $(srcdir)/doc/mans/bindle_bindex.3.in
 	@$(do_subst_dt)
 
@@ -291,6 +296,10 @@ doc/mans/bindle_strlcpy.3: Makefile $(srcdir)/doc/mans/bindle_strlcpy.3.in
 install-exec-local:
 
 install-data-local: install-man
+	if test -f $(DESTDIR)/$(mandir)/man3/bindle_basename_r.3;then \
+	   cd $(DESTDIR)/$(mandir)/man3 && \
+	   ln -fs bindle_basename_r.3 bindle_basename.3; \
+	fi;
 	if test -f $(DESTDIR)/$(mandir)/man3/bindle_bindex.3;then\
 	   cd $(DESTDIR)/$(mandir)/man3 && \
 	   ln -fs bindle_bindex.3 bindle_badd.3 && \
