doc: adding man page bindle_strtobool.3

--- a/Makefile.am
+++ b/Makefile.am
@@ -90,7 +90,8 @@ man_MANS				= doc/mans/bindletools.1 \
 					  doc/mans/bindle_strdup.3 \
 					  doc/mans/bindle_strings.3 \
 					  doc/mans/bindle_strlcpy.3 \
-					  doc/mans/bindle_strsadd.3
+					  doc/mans/bindle_strsadd.3 \
+					  doc/mans/bindle_strtobool.3
 info_TEXINFOS				=
 noinst_DATA				=
 noinst_LTLIBRARIES			=
@@ -135,6 +136,7 @@ EXTRA_DIST				= $(doc_DATA) \
 					  doc/mans/bindle_strings.3.in \
 					  doc/mans/bindle_strlcpy.3.in \
 					  doc/mans/bindle_strsadd.3.in \
+					  doc/mans/bindle_strtobool.3.in \
 					  examples/Makefile \
 					  tests/bindletools/README.md \
 					  m4/bindle-doxygen.m4 \
@@ -295,6 +297,9 @@ doc/mans/bindle_strlcpy.3: Makefile $(srcdir)/doc/mans/bindle_strlcpy.3.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_strsadd.3: Makefile $(srcdir)/doc/mans/bindle_strsadd.3.in
+	@$(do_subst_dt)
+
+doc/mans/bindle_strtobool.3: Makefile $(srcdir)/doc/mans/bindle_strtobool.3.in
 	@$(do_subst_dt)
 
 # local targets
