doc: adding man page bindle_strsplit.3

--- a/Makefile.am
+++ b/Makefile.am
@@ -91,6 +91,7 @@ man_MANS				= doc/mans/bindletools.1 \
 					  doc/mans/bindle_strings.3 \
 					  doc/mans/bindle_strlcpy.3 \
 					  doc/mans/bindle_strsadd.3 \
+					  doc/mans/bindle_strsplit.3 \
 					  doc/mans/bindle_strtobool.3 \
 					  doc/mans/bindle_urldesc.3
 info_TEXINFOS				=
@@ -137,6 +138,7 @@ EXTRA_DIST				= $(doc_DATA) \
 					  doc/mans/bindle_strings.3.in \
 					  doc/mans/bindle_strlcpy.3.in \
 					  doc/mans/bindle_strsadd.3.in \
+					  doc/mans/bindle_strsplit.3.in \
 					  doc/mans/bindle_strtobool.3.in \
 					  doc/mans/bindle_urldesc.3.in \
 					  examples/Makefile \
@@ -299,6 +301,9 @@ doc/mans/bindle_strlcpy.3: Makefile $(srcdir)/doc/mans/bindle_strlcpy.3.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_strsadd.3: Makefile $(srcdir)/doc/mans/bindle_strsadd.3.in
+	@$(do_subst_dt)
+
+doc/mans/bindle_strsplit.3: Makefile $(srcdir)/doc/mans/bindle_strsplit.3.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_strtobool.3: Makefile $(srcdir)/doc/mans/bindle_strtobool.3.in
