doc: adding man page bindle_strtrim.3

--- a/Makefile.am
+++ b/Makefile.am
@@ -93,6 +93,7 @@ man_MANS				= doc/mans/bindletools.1 \
 					  doc/mans/bindle_strsadd.3 \
 					  doc/mans/bindle_strsplit.3 \
 					  doc/mans/bindle_strtobool.3 \
+					  doc/mans/bindle_strtrim.3 \
 					  doc/mans/bindle_urldesc.3
 info_TEXINFOS				=
 noinst_DATA				=
@@ -140,6 +141,7 @@ EXTRA_DIST				= $(doc_DATA) \
 					  doc/mans/bindle_strsadd.3.in \
 					  doc/mans/bindle_strsplit.3.in \
 					  doc/mans/bindle_strtobool.3.in \
+					  doc/mans/bindle_strtrim.3.in \
 					  doc/mans/bindle_urldesc.3.in \
 					  examples/Makefile \
 					  tests/bindletools/README.md \
@@ -307,6 +309,9 @@ doc/mans/bindle_strsplit.3: Makefile $(srcdir)/doc/mans/bindle_strsplit.3.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_strtobool.3: Makefile $(srcdir)/doc/mans/bindle_strtobool.3.in
+	@$(do_subst_dt)
+
+doc/mans/bindle_strtrim.3: Makefile $(srcdir)/doc/mans/bindle_strtrim.3.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_urldesc.3: Makefile $(srcdir)/doc/mans/bindle_urldesc.3.in
