doc: adding man page for bindle_filetostr.3

--- a/Makefile.am
+++ b/Makefile.am
@@ -83,6 +83,7 @@ man_MANS				= doc/mans/bindletools.1 \
 					  doc/mans/bindle_decode.3 \
 					  doc/mans/bindle_dirname_r.3 \
 					  doc/mans/bindle_enqueue.3 \
+					  doc/mans/bindle_filetostr.3 \
 					  doc/mans/bindle_peek.3 \
 					  doc/mans/bindle_push.3 \
 					  doc/mans/bindle_refcount.3 \
@@ -131,6 +132,7 @@ EXTRA_DIST				= $(doc_DATA) \
 					  doc/mans/bindle_decode.3.in \
 					  doc/mans/bindle_dirname_r.3.in \
 					  doc/mans/bindle_enqueue.3.in \
+					  doc/mans/bindle_filetostr.3.in \
 					  doc/mans/bindle_peek.3.in \
 					  doc/mans/bindle_push.3.in \
 					  doc/mans/bindle_refcount.3.in \
@@ -279,6 +281,9 @@ doc/mans/bindle_dirname_r.3: Makefile $(srcdir)/doc/mans/bindle_dirname_r.3.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_enqueue.3: Makefile $(srcdir)/doc/mans/bindle_enqueue.3.in
+	@$(do_subst_dt)
+
+doc/mans/bindle_filetostr.3: Makefile $(srcdir)/doc/mans/bindle_filetostr.3.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_peek.3: Makefile $(srcdir)/doc/mans/bindle_peek.3.in
