bindletools: replacing 'urlencoding' widget with 'pctenc' widget

--- a/Makefile.am
+++ b/Makefile.am
@@ -240,8 +240,7 @@ src_bindletools_SOURCES			= src/bindletools.c \
 					  src/bindletools.h \
 					  src/widget-encodings.c \
 					  src/widget-expand.c \
-					  src/widget-urldesc.c \
-					  src/widget-urlencoding.c
+					  src/widget-urldesc.c
 
 
 # Makefile includes
