--- a/build-aux/makefile-libbindle.am
+++ b/build-aux/makefile-libbindle.am
@@ -46,6 +46,7 @@ EXTRA_PROGRAMS				+= tests/bindle-array-queue \
 					   tests/bindle-enc-hex-dec \
 					   tests/bindle-enc-hex-enc \
 					   tests/bindle-enc-hex-val \
+					   tests/bindle-enc-pctenc-dec \
 					   tests/bindle-str-basename \
 					   tests/bindle-str-chomp \
 					   tests/bindle-str-dirname \
@@ -98,6 +99,7 @@ if ENABLE_BINDLE_TESTS
    TESTS				+= tests/bindle-enc-hex-dec
    TESTS				+= tests/bindle-enc-hex-enc
    TESTS				+= tests/bindle-enc-hex-val
+   TESTS				+= tests/bindle-enc-pctenc-dec
    TESTS				+= tests/bindle-str-basename
    TESTS				+= tests/bindle-str-chomp
    TESTS				+= tests/bindle-str-dirname
@@ -354,6 +356,17 @@ tests_bindle_enc_hex_val_SOURCES	= $(bindletools_srcdir)/include/bindle.h \
 					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-strings.h \
 					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-strings.c \
 					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-hex-val.c
+
+
+# macros for tests/bindle-enc-pctenc-dec
+tests_bindle_enc_pctenc_dec_DEPENDENCIES	= $(BINDLE_TESTS_DEPS)
+tests_bindle_enc_pctenc_dec_LDADD	= $(BINDLE_TESTS_DEPS)
+tests_bindle_enc_pctenc_dec_SOURCES	= $(bindletools_srcdir)/include/bindle.h \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-tests.h \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-tests.c \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-strings.h \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-strings.c \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-pctenc-dec.c
 
 
 # macros for tests/bindle-str-basename
