tests: adding test bindle-enc-pctenc-enc

--- a/build-aux/makefile-libbindle.am
+++ b/build-aux/makefile-libbindle.am
@@ -47,6 +47,7 @@ EXTRA_PROGRAMS				+= tests/bindle-array-queue \
 					   tests/bindle-enc-hex-enc \
 					   tests/bindle-enc-hex-val \
 					   tests/bindle-enc-pctenc-dec \
+					   tests/bindle-enc-pctenc-enc \
 					   tests/bindle-str-basename \
 					   tests/bindle-str-chomp \
 					   tests/bindle-str-dirname \
@@ -100,6 +101,7 @@ if ENABLE_BINDLE_TESTS
    TESTS				+= tests/bindle-enc-hex-enc
    TESTS				+= tests/bindle-enc-hex-val
    TESTS				+= tests/bindle-enc-pctenc-dec
+   TESTS				+= tests/bindle-enc-pctenc-enc
    TESTS				+= tests/bindle-str-basename
    TESTS				+= tests/bindle-str-chomp
    TESTS				+= tests/bindle-str-dirname
@@ -367,6 +369,17 @@ tests_bindle_enc_pctenc_dec_SOURCES	= $(bindletools_srcdir)/include/bindle.h \
 					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-strings.h \
 					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-strings.c \
 					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-pctenc-dec.c
+
+
+# macros for tests/bindle-enc-pctenc-enc
+tests_bindle_enc_pctenc_enc_DEPENDENCIES	= $(BINDLE_TESTS_DEPS)
+tests_bindle_enc_pctenc_enc_LDADD	= $(BINDLE_TESTS_DEPS)
+tests_bindle_enc_pctenc_enc_SOURCES	= $(bindletools_srcdir)/include/bindle.h \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-tests.h \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-tests.c \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-strings.h \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-strings.c \
+					  $(bindletools_srcdir)/tests/bindletools/bindle-enc-pctenc-enc.c
 
 
 # macros for tests/bindle-str-basename
