docs: updating man page for bindletools.1

--- a/doc/mans/bindletools.1.in
+++ b/doc/mans/bindletools.1.in
@@ -89,12 +89,16 @@ crockfordbase32
 encode/decode Crockford's base32 strings.
 
 .TP 20
-urldesc
-parses URL
+expand
+expand tokens within string
 
 .TP 20
-urlencoding
-encode/decode string for URL
+expand
+expand tokens within string
+
+.TP 20
+pctenc
+encode/decode percent-encoding/URL encoding string
 
 .SH SEE ALSO
 .BR bindletools-base16 (1),
@@ -102,8 +106,9 @@ encode/decode string for URL
 .BR bindletools-base32hex (1),
 .BR bindletools-base64 (1),
 .BR bindletools-crockfordbase32 (1),
+.BR bindletools-expand (1),
+.BR bindletools-pctenc (1),
 .BR bindletools-urldesc (1),
-.BR bindletools-urlencoding (1),
 .BR bindletools (3)
 
 .SH AUTHOR
