--- a/Makefile.am
+++ b/Makefile.am
@@ -77,6 +77,7 @@ lib_LTLIBRARIES				=
 lib_LIBRARIES				=
 man_MANS				= doc/mans/bindletools.1 \
 					  doc/mans/bindletools.3 \
+					  doc/mans/bindletools-base16.1 \
 					  doc/mans/bindle_array.3 \
 					  doc/mans/bindle_basename_r.3 \
 					  doc/mans/bindle_bindex.3 \
@@ -130,6 +131,7 @@ EXTRA_DIST				= $(doc_DATA) \
 					  autogen.sh \
 					  doc/mans/bindletools.1.in \
 					  doc/mans/bindletools.3.in \
+					  doc/mans/bindletools-base16.1.in \
 					  doc/mans/bindle_array.3.in \
 					  doc/mans/bindle_basename_r.3.in \
 					  doc/mans/bindle_bindex.3.in \
@@ -271,6 +273,9 @@ doc/mans/bindletools.1: Makefile $(srcdir)/doc/mans/bindletools.1.in
 	@$(do_subst_dt)
 
 doc/mans/bindletools.3: Makefile $(srcdir)/doc/mans/bindletools.3.in
+	@$(do_subst_dt)
+
+doc/mans/bindletools-base16.1: Makefile $(srcdir)/doc/mans/bindletools-base16.1.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_array.3: Makefile $(srcdir)/doc/mans/bindle_array.3.in
