--- a/Makefile.am
+++ b/Makefile.am
@@ -78,6 +78,7 @@ lib_LIBRARIES				=
 man_MANS				= doc/mans/bindletools.1 \
 					  doc/mans/bindletools.3 \
 					  doc/mans/bindletools-base16.1 \
+					  doc/mans/bindletools-base32.1 \
 					  doc/mans/bindle_array.3 \
 					  doc/mans/bindle_basename_r.3 \
 					  doc/mans/bindle_bindex.3 \
@@ -132,6 +133,7 @@ EXTRA_DIST				= $(doc_DATA) \
 					  doc/mans/bindletools.1.in \
 					  doc/mans/bindletools.3.in \
 					  doc/mans/bindletools-base16.1.in \
+					  doc/mans/bindletools-base32.1.in \
 					  doc/mans/bindle_array.3.in \
 					  doc/mans/bindle_basename_r.3.in \
 					  doc/mans/bindle_bindex.3.in \
@@ -276,6 +278,9 @@ doc/mans/bindletools.3: Makefile $(srcdir)/doc/mans/bindletools.3.in
 	@$(do_subst_dt)
 
 doc/mans/bindletools-base16.1: Makefile $(srcdir)/doc/mans/bindletools-base16.1.in
+	@$(do_subst_dt)
+
+doc/mans/bindletools-base32.1: Makefile $(srcdir)/doc/mans/bindletools-base32.1.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_array.3: Makefile $(srcdir)/doc/mans/bindle_array.3.in
