doc: adding man page for bindletools-base32hex.1

--- a/Makefile.am
+++ b/Makefile.am
@@ -79,6 +79,7 @@ man_MANS				= doc/mans/bindletools.1 \
 					  doc/mans/bindletools.3 \
 					  doc/mans/bindletools-base16.1 \
 					  doc/mans/bindletools-base32.1 \
+					  doc/mans/bindletools-base32hex.1 \
 					  doc/mans/bindle_array.3 \
 					  doc/mans/bindle_basename_r.3 \
 					  doc/mans/bindle_bindex.3 \
@@ -134,6 +135,7 @@ EXTRA_DIST				= $(doc_DATA) \
 					  doc/mans/bindletools.3.in \
 					  doc/mans/bindletools-base16.1.in \
 					  doc/mans/bindletools-base32.1.in \
+					  doc/mans/bindletools-base32hex.1.in \
 					  doc/mans/bindle_array.3.in \
 					  doc/mans/bindle_basename_r.3.in \
 					  doc/mans/bindle_bindex.3.in \
@@ -281,6 +283,9 @@ doc/mans/bindletools-base16.1: Makefile $(srcdir)/doc/mans/bindletools-base16.1.
 	@$(do_subst_dt)
 
 doc/mans/bindletools-base32.1: Makefile $(srcdir)/doc/mans/bindletools-base32.1.in
+	@$(do_subst_dt)
+
+doc/mans/bindletools-base32hex.1: Makefile $(srcdir)/doc/mans/bindletools-base32hex.1.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_array.3: Makefile $(srcdir)/doc/mans/bindle_array.3.in
