--- a/doc/mans/bindletools-pctenc.1.in
+++ b/doc/mans/bindletools-pctenc.1.in
@@ -61,12 +61,20 @@ decode input data as a percent-encoding string
 encode input data as a percent-encoding string
 
 .TP 25
+\fB-i\fR \fIinput\fR, \fB--input\fR=\fIfile\fR
+use input file instead of stdin
+
+.TP 25
 \fB-h\fR, \fB--help\fR
 print this usage information and exit
 
 .TP 25
 \fB-n\fR, \fB--newline\fR
 add newline to end of string
+
+.TP 25
+\fB-o\fR \fIinput\fR, \fB--output\fR=\fIfile\fR
+use output file instead of stdout
 
 .TP 25
 \fB-p\fR, \fB--nopadding\fR
